Fixed no scrollbar for entire body element

--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ a {
 body {
     max-width: 90%;
     margin: auto;
-    overflow-x:hidden;
-    overflow-y:hidden;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
